Adding small details

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ footer {
 .imagen-links {
   display: flex;
   gap: 20px;
-  justify-content: center;
+  justify-content: left;
   margin-top: 20px;
 }
 
